--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.2
 Django==3.2
 django-allauth==0.41.0
+djongo==1.3.6
+dnspython==2.2.1
 oauthlib==3.2.0
+pymongo==3.12.3
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
-sqlparse==0.4.2
+sqlparse==0.2.4
