--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
+cloudinary==1.29.0
 Django==3.2
 django-allauth==0.41.0
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.14.0
 django-environ==0.8.1
 djongo==1.3.6
