--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 cloudinary==1.29.0
+dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
 django-cloudinary-storage==0.3.0
@@ -9,6 +10,7 @@ djongo==1.3.6
 dnspython==2.2.1
 gunicorn==20.1.0
 oauthlib==3.2.0
+psycopg2==2.9.3
 pymongo==3.12.3
 python3-openid==3.2.0
 pytz==2022.1
